# TranslatorSeedX

./: .flake8  .gitignore  GITHUB_SETUP.md  PROJECT_STRUCTURE.md  README.md  VSCODE_SETUP.md  WIKI_HOME.md  create_github_repo.bat  create_github_repo.ps1  install.bat  install.ps1  main.py  pyproject.toml  requirements.txt  run.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
models/: README.md
src/: __init__.py
src/backend/: __init__.py  model_handler.py  model_handler_transformers.py  translation_backend.py
src/gui/: __init__.py  filterable_combobox.py  translator_app.py
src/utils/: __init__.py  config.py  download_missing_files.py
